validating-admission-policies/pod-security/baseline/disallow-selinux/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    seLinuxOptions:
      type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  containers:
  - name: container01
    image: dummyimagename
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    seLinuxOptions:
      type: container_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    seLinuxOptions:
      type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    seLinuxOptions:
      type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: container_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: container_t
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod11
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod12
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod13
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod14
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    seLinuxOptions:
      user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    seLinuxOptions:
      role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    seLinuxOptions:
      user: sysadm_u
      role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod05
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod06
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        user: sysadm_u
        role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod07
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod08
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod09
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        user: sysadm_u
        role: sysadm_r
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod10
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: unconfined_t
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        user: sysadm_u
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod11
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod12
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod13
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod14
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod15
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod16
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-badpod17
spec:
  containers:
  - name: container01
    image: dummyimagename
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    seLinuxOptions:
      level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: container_t
        level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod05
spec:
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod06
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        type: container_t
  - name: container02
    image: dummyimagename
    securityContext:
      seLinuxOptions:
        level: "s0:c123,c456"
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod07
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod08
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod09
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod10
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: selur-goodpod11
spec:
  containers:
  - name: container01
    image: dummyimagename
---
